# jansclojurekernel

./: README.md  pyproject.toml
example/: example.ipynb
jansclojurekernel/: kernel.json
src/jansclojurekernel/: __init__.py  __main__.py  install_kernelspec.py  kernel.py
